# kilolang

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: feature_template.yml
kilo/: CMakeLists.txt  kilo
kilo/.cache/clangd/index/: Constructors.cpp.766549A1115EDC51.idx  Lexer.hpp.583C636F0C6E723B.idx  main.cpp.E35E5FCCE7F113DF.idx
kilo/include/: Kilo.hpp
kilo/include/Kilo/: Lexer.hpp  Token.hpp  TokenType.hpp  TokenTypeUtils.hpp
kilo/src/: main.cpp
kilo/src/Lexer/: Constructors.cpp  LexGetters.cpp  LexSetters.cpp  LexUtilities.cpp  Methods.cpp  TokenChecks.cpp  TokenUtilities.cpp
kilo/src/Token/: Constructors.cpp  Getters.cpp  Setters.cpp  Utility.cpp
kilo/src/TokenTypeUtils/: Getters.cpp  Utility.cpp
sandbox/: test0.kilo  test0.kiloc  test1.kilo  test1.kiloc
